Added info about what this repo is

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 TiLDA Mk4 App Library
 -------------------
 
+This repo contains all of the super awesome badge software that isn't avaliable on the main store
+
 Check out the wiki: https://badge.emfcamp.org/wiki/TiLDA_MK4
 
 Please use one of these categories:
